--- a/HaarlemFestival/Views/CheckOut/_CheckOutLayout.cshtml
+++ b/HaarlemFestival/Views/CheckOut/_CheckOutLayout.cshtml
@@ -10,7 +10,7 @@
 
 <section class="CheckOut">
 
-    <ul>
+    <ul class="CheckOutSteps">
         <li class="col-sm-3 @(ViewBag.Title.Equals("CheckOut1")? "selected" : "") ">Step 1<br>Login</li>
         <li class="col-sm-3 @(ViewBag.Title.Equals("CheckOut2")? "selected" : "") ">Step 2<br>Personal info/Register</li>
         <li class="col-sm-3 @(ViewBag.Title.Equals("CheckOut3")? "selected" : "") ">Step 3<br>Payment</li>
