--- a/HaarlemFestival/Views/Shared/_Layout.cshtml
+++ b/HaarlemFestival/Views/Shared/_Layout.cshtml
@@ -54,7 +54,7 @@
                                 }
                                 catch
                                 {
-                                    <label>0</label>
+                                    <text>0</text>
                                 }
 
                             </a>
