--- a/HaarlemFestival/Content/Talking.css
+++ b/HaarlemFestival/Content/Talking.css
@@ -236,14 +236,17 @@
 #Question_Message {
     width: 100%;
     height: 5em;
-    border-radius: 10px 0 10px 10px;
+    border-radius: 10px 10px 0  10px;
     float: left;
 }
 
 #TalkingQuestionButton {
-    width: 20%;
+    min-width: 20%;
     border-radius: 0 10px 10px 0;
-    margin-bottom: 12%;
+    background-color: #1dbf3b;
+    color: white;
+    margin-top: 10%;
+    margin-left: 4%;
 }
 
 /* Thank you Modal */
@@ -261,12 +264,16 @@
 
 
 /* Order Modal */
+.OrderP{
+    margin: 4px 0 10px 0;
+} 
+
 #OrderModal modal-content {
     height: 90%;
     padding-left: 40px;
 }
 #OrderSelect{
-    margin-left: 5%;
+    margin-left: 7%;
 }
 
 #OrderMessage {
@@ -277,10 +284,13 @@
 }
 
 #TalkingOrderButton {
-    width: 20%;
+    min-width: 20%;
     border-radius: 0 10px 10px 0;
-    margin-top: 5%;
-    margin-left: 12%;
+    background-color: #1dbf3b;
+    color: white;
+
+    /*margin-top: 5%;*/
+    margin-left: 2%;
 }
 /*#closeOrderModal {}*/
 
