--- a/HaarlemFestival/Content/Basket.css
+++ b/HaarlemFestival/Content/Basket.css
@@ -68,3 +68,11 @@
     border-bottom: solid;
     border-width: thin;
 }
+/*---------------------------------------De rest?------------------------------------------*/
+
+#BasketTotalPrice{
+    margin-top: 3%;
+    margin-right: 3%;
+    margin-left: 4%;
+
+}
