--- a/HaarlemFestival/Views/CheckOut/CheckOut2.cshtml
+++ b/HaarlemFestival/Views/CheckOut/CheckOut2.cshtml
@@ -1,6 +1,10 @@
-﻿@{
+﻿@model HaarlemFestival.Model.PagePlusOrderPlusLogin
+
+
+@{
     ViewBag.Title = "CheckOut2";
 }
+
 @{
     Layout = "_CheckOutLayout.cshtml";
 }
