--- a/HaarlemFestival/Views/Dinner/Restaurant.cshtml
+++ b/HaarlemFestival/Views/Dinner/Restaurant.cshtml
@@ -72,7 +72,7 @@
 
     @using (Html.BeginForm("Order", "Dinner", FormMethod.Post))
     {
-        <text><span style="color: red">*</span> = required field!*</text>
+        <label class="required"><span style="color: red">*</span> = required field!*</label>
 
         <fieldset >
             <label class="restaurant_form_label" for="day">For which day?*<span style="color: red">*</span></label>
