--- a/HaarlemFestival/Views/CheckOut/Basket.cshtml
+++ b/HaarlemFestival/Views/CheckOut/Basket.cshtml
@@ -4,13 +4,9 @@
     ViewBag.Title = "Basket";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
 @section AddToHead{
     <link href="@Url.Content("~/Content/Basket.css")" rel="stylesheet" type="text/css" />
 }
-
-<h2>Basket</h2>
-
 @{
     ViewBag.Title = "Index";
 }
@@ -18,22 +14,22 @@
 
 <section class="AgendaIntro">
 
-    <h2 class="AgendaHeader">@Model.Page.Title</h2>
+    <h2 class="AgendaHeader">Shopping Cart</h2>
 
     <p class="AgendaIntroText">
-        @Model.Page.PageDescriptions[0].DescriptionText
+        
     </p>
 </section>
 
 <section class="AgendaOrders">
     <ul class="AgendaOrderList">
         <li class="OrderHeader">
-            <div class="orderItem col-md-3">Name</div>
-            <div class="orderItem col-md-2">Event</div>
-            <div class="orderItem col-md-1">Prijs</div>
-            <div class="orderItem col-md-1">Aantal</div>
-            <div class="orderItem col-md-2">Totaalprijs</div>
-            <div class="orderItem col-md-2">Start tijd/datum</div>
+            <div class="itemHeader col-md-3">Name</div>
+            <div class="itemHeader col-md-2">Event</div>
+            <div class="itemHeader col-md-1">Prijs</div>
+            <div class="itemHeader col-md-1">Aantal</div>
+            <div class="itemHeader col-md-2">Totaalprijs</div>
+            <div class="itemHeader col-md-2">Start tijd/datum</div>
         </li>
 
 
@@ -53,7 +49,7 @@
                         <div class="orderItem col-md-2">@OHT.Ticket.TimeSlot.StartTime.ToString("hh:mm dd/MM/yyyy")</div>
                         <div class="col-md-1">@Html.ActionLink("Delete", "Delete", new { ohdId = OHT.Ticket_TimeSlot_Activity_Id })</div>
                     </li>
-                    
+
                 }
             }
         }
@@ -64,6 +60,6 @@
 
         
     </ul>
-    <label>Totalprice: @Model.TotalOrderPrice.ToString()</label>
-    @Html.ActionLink("Continue to Checkout", "CheckOut1")
+    <label class="totalPrice">Totalprice: @Model.TotalOrderPrice.ToString()</label>
+    @Html.ActionLink("Continue to Checkout", "CheckOut1", null, new { @class= "btn_cta" })
 </section>
