--- a/HaarlemFestival/Content/CheckOut.css
+++ b/HaarlemFestival/Content/CheckOut.css
@@ -90,6 +90,12 @@
     vertical-align: middle;
 }
 
+.loginForm .form-group{
+    width: 100%;
+    height: 25px;
+
+}
+
 .middenstuk {
     float: left;
     width: 20%;
@@ -123,7 +129,7 @@
     border-radius: 4px;
     border-style: solid;
     margin-top: 10px;
-    margin-left: 50%;
+    margin-left: 39%;
     margin-right: 50%;
 }
 
@@ -142,7 +148,7 @@
     border-style: solid;
     margin-top: 10px;
     margin-bottom: 10px;
-    margin-left: 50%;
+    margin-left: 41%;
     margin-right: 50%;
 }
 
