--- a/HaarlemFestival/Views/Dinner/Restaurant.cshtml
+++ b/HaarlemFestival/Views/Dinner/Restaurant.cshtml
@@ -116,7 +116,7 @@
         </fieldset>
 
         <input type="hidden" name="activity.Id" value="@Model.Activity.Id" />
-        <input type="submit" value="Order" class="btn_order" />
+        <input type="submit" value="Add to basket" class="btn_order" />
     }
 
 </div>
