input velden enzo klaar van checkout 2, begin form werkt alleen niet

--- a/HaarlemFestival/Views/Talking/Index.cshtml
+++ b/HaarlemFestival/Views/Talking/Index.cshtml
@@ -102,6 +102,34 @@
 
     </section>
 
+
+    <section class="LinkerColom">
+        <p class="CheckOut2Label">First Name: <label class="Verplicht">*</label></p>
+        <input type="text" />
+    </section>
+            <section class="RechterColom">
+                <p class="CheckOut2Label">Last Name: <label class="Verplicht">*</label></p>
+                <input type="text"  />
+            </section>
+            <section class="LinkerColom">
+                <p class="CheckOut2Label">Email: <label class="Verplicht">*</label></p>
+                <input type="text"  />
+            </section>
+            <section class="RechterColom">
+                <p class="CheckOut2Label">Qountry: </p>
+                <input type="text" />
+            </section>
+
+
+            <section class="LinkerColom">
+                <p id="Password" class="CheckOut2Label">Password : <label class="Verplicht">*</label></p>
+                <input type="text"  />
+            </section>
+            <section class="LinkerColom">
+                <p id="ConfirmPassword" class="CheckOut2Label">Confirm password : <label class="Verplicht">*</label></p>
+                <input type="text" />
+            </section>
+
 }
 
 <section id="QuestionModal" class="TalkingBasicModal">
