--- a/HaarlemFestival/Views/CheckOut/CheckOut2.cshtml
+++ b/HaarlemFestival/Views/CheckOut/CheckOut2.cshtml
@@ -10,12 +10,11 @@
 
 
 
-
 <section class="CheckOut2">
     <section class="CheckOut2Content">
-        
-        @*@using (Html.BeginForm("Checkout2", "CheckOut", FormMethod.Post, new { id = "CheckOut2Form" }))
-        {*@
+
+        @using (Html.BeginForm("Checkout2", "CheckOut", FormMethod.Post, new { id = "CheckOut2Form" }))
+        {
             <section class="LinkerColom">
                 <p class="CheckOut2Label">First Name: <label class="Verplicht">*</label></p>
                 <input type="text" value="@Model.Customer.FirstName" />
@@ -40,12 +39,12 @@
             </section>
             <section class="LinkerColom">
                 <p id="ConfirmPassword" class="CheckOut2Label">Confirm password : <label class="Verplicht">*</label></p>
-                <input type="text"  />
+                <input type="text" />
             </section>
 
 
             <button id="Step2ButttonStep1" onclick="location.href = '@Url.Action("Checkout1", "CheckOut")' ">Step 1</button>
             <button id="Step2ButttonContinue" onclick="location.href = '@Url.Action("Checkout3", "CheckOut")' " type="submit">Continue</button>
-        @*}*@
+        }
     </section>
 </section>
