--- a/HaarlemFestival/Views/CheckOut/CheckOut2.cshtml
+++ b/HaarlemFestival/Views/CheckOut/CheckOut2.cshtml
@@ -17,25 +17,25 @@
         {
             <section class="LinkerColom">
                 <p class="CheckOut2Label">First Name: <label class="Verplicht">*</label></p>
-                <input type="text" value="@Model.Customer.FirstName" />
+                <input type="text" value="@Model.Orders[0].Customer.FirstName" />
             </section>
             <section class="RechterColom">
                 <p class="CheckOut2Label">Last Name: <label class="Verplicht">*</label></p>
-                <input type="text" value="@Model.Customer.LastName" />
+                <input type="text" value="@Model.Orders[0].Customer.LastName" />
             </section>
             <section class="LinkerColom">
                 <p class="CheckOut2Label">Email: <label class="Verplicht">*</label></p>
-                <input type="text" value="@Model.Customer.Email" />
+                <input type="text" value="@Model.Orders[0].Customer.Email" />
             </section>
             <section class="RechterColom">
                 <p class="CheckOut2Label">Qountry: </p>
-                <input type="text" value="@Model.Customer.Country" />
+                <input type="text" value="@Model.Orders[0].Customer.Country" />
             </section>
 
 
             <section class="LinkerColom">
                 <p id="Password" class="CheckOut2Label">Password : <label class="Verplicht">*</label></p>
-                <input type="text" value="@Model.Customer.Password" />
+                <input type="text" value="@Model.Orders[0].Customer.Password" />
             </section>
             <section class="LinkerColom">
                 <p id="ConfirmPassword" class="CheckOut2Label">Confirm password : <label class="Verplicht">*</label></p>
