--- a/HaarlemFestival/Views/CheckOut/_CheckOutLayout.cshtml
+++ b/HaarlemFestival/Views/CheckOut/_CheckOutLayout.cshtml
@@ -8,8 +8,7 @@
 
 }
 <section class="checkout_introduction">
-    <h1>Only a few steps away</h1>
-    <p>Pay your fucking shit and visit our festival! </p>
+    <h1>Only a few steps away...</h1>
 </section>
 
 
