--- a/HaarlemFestival/Views/CheckOut/_CheckOutLayout.cshtml
+++ b/HaarlemFestival/Views/CheckOut/_CheckOutLayout.cshtml
@@ -7,6 +7,11 @@
     <link href=@Url.Content("~/Content/CheckOut.css") rel="stylesheet" type="text/css" />
 
 }
+
+@section AddToScripts{
+    <script src="@Url.Content("~/Scripts/CheckOut3Payment.js")"></script>
+}
+
 <section class="checkout_introduction">
     <h1>Only a few steps away...</h1>
 </section>
