--- a/HaarlemFestival/Views/Historic/Index.cshtml
+++ b/HaarlemFestival/Views/Historic/Index.cshtml
@@ -23,7 +23,7 @@
         @Html.Raw(Model.Page.PageDescriptions[0].DescriptionText)
     </p>
 
-    <button id="HistoricButtonOrder1">Click here to book now!</button>
+    <button id="HistoricButtonOrder1">@Html.Raw(Model.Page.PageDescriptions[5].DescriptionText)</button>
 </section>
 
 <section>
@@ -64,70 +64,74 @@
     <img class="HistoricImageDropMarker9 showhide" id="his9" src="@Html.Raw(Model.Page.PageDescriptions[4].ImageUrl)" alt="" />
 
     <section class="HistoricRouteInfo">
-        <p class="DropMarkerGuide">Please hover over the drop markers on the map to the left</p>
+        <p class="DropMarkerGuide">@Html.Raw(Model.Page.PageDescriptions[6].DescriptionText)</p>
         <img class="HistoricImageDropMarker10" src="/img/Historic/HistoricDropMarker.png" alt="Hover over these drop markers on the map to the left" />
     </section>
 
     <section class="HistoricRouteInfo1">
         <p class="HistoricRouteInfo1">
-            The Grote Kerk or St.-Bavokerk is a Protestant church and former Catholic cathedral located on the central market square in the Dutch city of Haarlem.
-            The Cathedral of Saint Bavo now serves as the main cathedral for the Roman Catholic Diocese of Haarlem-Amsterdam.
+            @Html.Raw(Model.Page.PageDescriptions[7].DescriptionText)
         </p>
         <img src="/img/Historic/Info1.jpg" alt="The Grote Kerk or St.-Bavokerk" class="HistoricRouteInfo1" />
     </section>
 
     <section class="HistoricRouteInfo2">
         <p class="HistoricRouteInfo2">
-            The Grote Markt is the central market square of the city Haarlem.
-            <br /> <br />
-            There are several old buildings to visit, for example:
-            De Vishal, De Vleeshal and the city hall.
+            @Html.Raw(Model.Page.PageDescriptions[8].DescriptionText)
         </p>
         <img src="/img/Historic/Info2.jpg" alt="" class="HistoricRouteInfo2" />
     </section>
 
     <section class="HistoricRouteInfo3">
         <p class="HistoricRouteInfo3">
-            The Hallen Haarlem is the name of the exhibition space on the Grote Markt, Haarlem, Netherlands, where modern and contemporary art is on display in alternating presentations.
-            The emphasis is on contemporary photograph and video presentations, with the focus on Man and society.
+            @Html.Raw(Model.Page.PageDescriptions[9].DescriptionText)
         </p>
         <img src="/img/Historic/Info3.jpg" alt="" class="HistoricRouteInfo3" />
     </section>
 
     <section class="HistoricRouteInfo4">
         <p class="HistoricRouteInfo4">
-            The Proveniershof is a hofje and former schutterij on the Grote Houtstraat in Haarlem, Netherlands.
-            The complex of buildings surrounds a rectangular garden taking up a city block that is on the Haarlem hofje route.
+            @Html.Raw(Model.Page.PageDescriptions[10].DescriptionText)
         </p>
         <img src="/img/Historic/Info4.jpg" alt="" class="HistoricRouteInfo4" />
     </section>
 
     <section class="HistoricRouteInfo5">
-        <p class="HistoricRouteInfo5">Jopenkerk Brewery is a Dutch brewery from Haarlem, which originated from the Haarlem Beer Company, founded in 1992, and is owned by Jopen BV since December 1996.</p>
+        <p class="HistoricRouteInfo5">
+            @Html.Raw(Model.Page.PageDescriptions[11].DescriptionText)
+        </p>
         <img src="/img/Historic/Info5.jpg" alt="" class="HistoricRouteInfo5" />
     </section>
 
     <section class="HistoricRouteInfo6">
-        <p class="HistoricRouteInfo6">The Waalse kerk is a Walloon church that was built in the middle of the 14th century. The church has an upper gallery built for the Beguines who lived there on the courtyard that still bear their name.</p>
+        <p class="HistoricRouteInfo6">
+            @Html.Raw(Model.Page.PageDescriptions[12].DescriptionText)
+        </p>
         <img src="/img/Historic/Info6.jpg" alt="" class="HistoricRouteInfo6" />
     </section>
 
     <section class="HistoricRouteInfo7">
-        <p class="HistoricRouteInfo7">The Adriaan is a windmill in the Netherlands that burnt down in 1932 and was rebuilt in 2002. The original windmill dates from 1779 and the mill has been a distinctive part of the skyline of Haarlem for centuries.</p>
+        <p class="HistoricRouteInfo7">
+            @Html.Raw(Model.Page.PageDescriptions[13].DescriptionText)
+        </p>
         <img src="/img/Historic/Info7.jpg" alt="" class="HistoricRouteInfo7" />
     </section>
 
     <section class="HistoricRouteInfo8">
-        <p class="HistoricRouteInfo8">The Amsterdamse Poort is an old city gate of Haarlem, Netherlands. It is located at the end of the old route from Amsterdam to Haarlem and the only gate left from the original twelve city gates.</p>
+        <p class="HistoricRouteInfo8">
+            @Html.Raw(Model.Page.PageDescriptions[14].DescriptionText)
+        </p>
         <img src="/img/Historic/Info8.jpg" alt="" class="HistoricRouteInfo8" />
     </section>
 
     <section class="HistoricRouteInfo9">
-        <p class="HistoricRouteInfo9">The Hofje van Bakenes or Bakenesserkamer is a hofje in Haarlem, Netherlands, located between the Bakenessergracht and the Wijde Appelaarsteeg. The hofje was founded from the legacy of Dirck van Bakenes (or Dirc van Bakenesse) in 1395. This makes it the oldest hofje in the Netherlands.</p>
+        <p class="HistoricRouteInfo9">
+            @Html.Raw(Model.Page.PageDescriptions[15].DescriptionText)
+        </p>
         <img src="/img/Historic/Info9.jpg" alt="" class="HistoricRouteInfo9" />
     </section>
 
-    <button id="HistoricButtonOrder2">Book now!</button>
+    <button id="HistoricButtonOrder2">@Html.Raw(Model.Page.PageDescriptions[16].DescriptionText)</button>
 
 </section>
 
@@ -140,25 +144,25 @@
     <div class="modal-contentHistoric">
         <span class="closeHistoric">&times;</span>
         <form id="formHistoric">
-            <h1>Order Historic Haarlem Tickets</h1>
-            <p>Choose day</p>
-            <input id="HistoricDayOption1" type="radio" name="day" value="1"required/>  <label for="DayChoice1">Thursday 26/07/2018</label>
-            <input id="HistoricDayOption2" type="radio" name="day" value="2"required/>  <label for="DayChoice2">Friday 27/07/2018</label>
-            <input id="HistoricDayOption3" type="radio" name="day" value="3"required/>  <label for="DayChoice3">Saturday 28/07/2018</label>
+            <h1>@Html.Raw(Model.Page.PageDescriptions[17].Title)</h1>
+            <p>@Html.Raw(Model.Page.PageDescriptions[17].DescriptionText)</p>
+            <input id="HistoricDayOption1" type="radio" name="day" value="1"required/>  <label for="DayChoice1">@Html.Raw(Model.Page.PageDescriptions[18].Title)</label>
+            <input id="HistoricDayOption2" type="radio" name="day" value="2"required/>  <label for="DayChoice2">@Html.Raw(Model.Page.PageDescriptions[18].DescriptionText)</label>
+            <input id="HistoricDayOption3" type="radio" name="day" value="3"required/>  <label for="DayChoice3">@Html.Raw(Model.Page.PageDescriptions[18].ImageUrl)</label>
             @Html.HiddenFor(model => model.OHT.Ticket_TimeSlot_StartTime)
-            <p>Choose Time</p>
+            <p>@Html.Raw(Model.Page.PageDescriptions[19].DescriptionText)</p>
             <input id="HistoricTimeOption1" type="radio" name="time" value="1"required/> <label for="TimeChoice1">10:00-13:00</label>
             <input id="HistoricTimeOption2" type="radio" name="time" value="2"required/> <label for="TimeChoice2">13:00-16:00</label>
             <input id="HistoricTimeOption3" type="radio" name="time" value="3"required/> <label for="TimeChoice3">16:00-19:00</label>
-            <p>Choose Language</p>
-            <input id="HistoricLangOption1" type="radio" name="language" value="1"required/> <label for="LangChoice1">English</label>
-            <input id="HistoricLangOption2" type="radio" name="language" value="2"required/> <label for="LangChoice2">Dutch</label>
-            <input id="HistoricLangOption3" type="radio" name="language" value="3"required/> <label for="LangChoice3">Chinese</label>
+            <p>@Html.Raw(Model.Page.PageDescriptions[20].DescriptionText)</p>
+            <input id="HistoricLangOption1" type="radio" name="language" value="1"required/> <label for="LangChoice1">@Html.Raw(Model.Page.PageDescriptions[21].Title)</label>
+            <input id="HistoricLangOption2" type="radio" name="language" value="2"required/> <label for="LangChoice2">@Html.Raw(Model.Page.PageDescriptions[21].DescriptionText)</label>
+            <input id="HistoricLangOption3" type="radio" name="language" value="3"required/> <label for="LangChoice3">@Html.Raw(Model.Page.PageDescriptions[21].ImageUrl)</label>
             @Html.HiddenFor(model => model.OHT.Ticket_TimeSlot_Activity_Id)
-            <p>Choose Amount of Tickets or select Group Ticket</p>
-            <p id="GroupTicketHistoric">Group Ticket <br /> €60.- for 4 persons <br />(€10,- savings) <br /> <span id="ValueHistoric">BEST VALUE</span></p>
-            <p id="SingleTicketHistoric">Single Ticket <br /> €17.50 each</p>
-            <input id="numberTicketsHistoric" type="number" placeholder="max. 4 tickets" min="1" max="4" list="defaultNumbers" required/> <label>Group ticket: </label> <input id="HistoricGroupTicketOption" type="checkbox" />
+            <p>@Html.Raw(Model.Page.PageDescriptions[22].DescriptionText)</p>
+            <p id="GroupTicketHistoric">@Html.Raw(Model.Page.PageDescriptions[23].DescriptionText)</p>
+            <p id="SingleTicketHistoric">@Html.Raw(Model.Page.PageDescriptions[24].DescriptionText)</p>
+            <input id="numberTicketsHistoric" type="number" placeholder="max. 4 tickets" min="1" max="4" list="defaultNumbers" required/> <label>@Html.Raw(Model.Page.PageDescriptions[25].DescriptionText)</label> <input id="HistoricGroupTicketOption" type="checkbox" />
             @Html.HiddenFor(model => model.OHT.Ticket_Type)
             <datalist id="defaultNumbers">
                 <option value="1">
@@ -169,8 +173,8 @@
             @Html.HiddenFor(model => model.OHT.Amount)
             @Html.HiddenFor(model => model.OHT.TotalPrice)
 
-            <p>Submit order:</p>
-            <input type="submit" id="HistoricSubmit"/>
+            <p>@Html.Raw(Model.Page.PageDescriptions[26].DescriptionText)</p>
+            <input type="submit" id="HistoricSubmit" value="@Html.Raw(Model.Page.PageDescriptions[27].DescriptionText)"/>
             
         </form>
     </div>
