--- a/HaarlemFestival/Views/CheckOut/_CheckOutLayout.cshtml
+++ b/HaarlemFestival/Views/CheckOut/_CheckOutLayout.cshtml
@@ -6,6 +6,8 @@
 @section AddToHead{
     <link href=@Url.Content("~/Content/CheckOut.css") rel="stylesheet" type="text/css" />
 
+    <script src="@Url.Content("~/Scripts/Talking.js")"></script>
+
 }
 <section class="checkout_introduction">
     <h1>Only a few steps away</h1>
