--- a/HaarlemFestival/Content/CheckOut.css
+++ b/HaarlemFestival/Content/CheckOut.css
@@ -159,36 +159,60 @@
 
 
 /*------------------------------------------Checkout 2------------------------------------------------*/
+.CheckOut2Content {
+    display: block;
+    width: 100%;
+    height: 80%;
+    min-height: 32em;
+}
+
 .LinkerColom {
     width: 25%;
-    margin: 0 0 0 20%;
+    margin-left: 34em;
+    text-align: left;
+    height: 4em;
 }
 
 .RechterColom {
     width: 25%;
-    margin: 0 0 0 5%;
+    margin-left: 34em;
+    text-align: left;
+    height: 4em;
+}
+
+#Password{
+    
+}
+
+#ConfirmPassword {
+    margin-bottom: 4em;
 }
 
 .CheckOut2Label {
     margin:0;
 }
 
+.CheckOut2TBox {
+    float: left
+}
+
 #Step2ButttonStep1 {
     display: block;
     float: left;
     margin: 0;
-    margin-left: 10%;
+    margin-left: 10em;
+    min-width: 100px;
+    background-color: #0094ff;
+    color: white;
 }
 
 #Step2ButttonContinue {
     display: block;
     float: right;
-    margin: 0;
+    margin-right: 10em;
+    min-width: 100px;
+    background-color: #0094ff;
+    color: white;
 }
 
-.CheckOut2Content {
-    display: block;
-    width: 100%;
-    height: 80%;
-    min-height: 100px;
-}
+
