--- a/HaarlemFestival/Views/Talking/Index.cshtml
+++ b/HaarlemFestival/Views/Talking/Index.cshtml
@@ -101,34 +101,7 @@
 
 
     </section>
-
-
-    <section class="LinkerColom">
-        <p class="CheckOut2Label">First Name: <label class="Verplicht">*</label></p>
-        <input type="text" />
-    </section>
-            <section class="RechterColom">
-                <p class="CheckOut2Label">Last Name: <label class="Verplicht">*</label></p>
-                <input type="text"  />
-            </section>
-            <section class="LinkerColom">
-                <p class="CheckOut2Label">Email: <label class="Verplicht">*</label></p>
-                <input type="text"  />
-            </section>
-            <section class="RechterColom">
-                <p class="CheckOut2Label">Qountry: </p>
-                <input type="text" />
-            </section>
-
-
-            <section class="LinkerColom">
-                <p id="Password" class="CheckOut2Label">Password : <label class="Verplicht">*</label></p>
-                <input type="text"  />
-            </section>
-            <section class="LinkerColom">
-                <p id="ConfirmPassword" class="CheckOut2Label">Confirm password : <label class="Verplicht">*</label></p>
-                <input type="text" />
-            </section>
+ 
 
 }
 
@@ -146,8 +119,7 @@
             @Html.TextAreaFor(model => model.Question.Message, new { @class = "TalkingQuestionMessage", @required = "required" })
             
 
-            <input type="submit" value="@Model.Page.PageDescriptions[1
-                                       ].Title" id="TalkingQuestionButton" />
+            <input type="submit" value="@Model.Page.PageDescriptions[1].Title" id="TalkingQuestionButton" />
         }
 
     </section>
