--- a/HaarlemFestival/Content/CheckOut.css
+++ b/HaarlemFestival/Content/CheckOut.css
@@ -50,7 +50,7 @@
 }
 
 .orders-container label{
-    margin: 25px 0px 20px 0px;
+    margin: 25px 0 20px 0;
     font-size: 16px;
 }
 
@@ -107,7 +107,7 @@
     height: 100px;
     border-left-style: solid;
     vertical-align: middle;
-    margin: 0px 50%;
+    margin: 0 50%;
 }
 
 .CheckOutRegister {
@@ -181,7 +181,7 @@
 }
 
 #Password{
-    
+    text-align: left;
 }
 
 #ConfirmPassword {
